syntax = "proto3";

package model;

option go_package = "github.com/twistedogic/spero/proto/model";

enum Outcome {
  H = 0;
  A = 1;
  D = 2;
}

message Odd {
  Outcome outcome = 3;
  float odd = 5;
}

message MatchOdd {
  enum Type {
    HAD = 0;
    FHA = 1;
  }

  string id = 1;
  string match_id = 2;
  Type type = 3;
  repeated Odd odds = 4;
}

message Bet {
  string id = 1;
  Outcome outcome = 2;
  float size = 3;
}
